# rp2040-morse-code-keyboard

./: .gitignore  README.md  platformio.ini  pyproject.toml
CAD/: morse_key.step
CAD/morse_usb_keyboard/: #auto_saved_files#  _autosave-morse_usb_keyboard.kicad_pcb  fp-info-cache  fp-lib-table  morse_usb_keyboard-job.gbrjob  morse_usb_keyboard.kicad_pcb  morse_usb_keyboard.kicad_prl  morse_usb_keyboard.kicad_pro  morse_usb_keyboard.kicad_sch  ~morse_usb_keyboard.kicad_sch.lck
CAD/morse_usb_keyboard/manufactoring/: morse_usb_keyboard-B_Cu.gbr  morse_usb_keyboard-B_Mask.gbr  morse_usb_keyboard-B_Paste.gbr  morse_usb_keyboard-B_Silkscreen.gbr  morse_usb_keyboard-Edge_Cuts.gbr  morse_usb_keyboard-F_Cu.gbr  morse_usb_keyboard-F_Mask.gbr  morse_usb_keyboard-F_Paste.gbr  morse_usb_keyboard-F_Silkscreen.gbr  morse_usb_keyboard-NPTH.drl  morse_usb_keyboard-PTH.drl
CAD/morse_usb_keyboard/morse_keyboard.pretty/: mose_key_button.kicad_mod  rp2040-zero-tht.kicad_mod
rp2040_morse_code_keyboard/: __init__.py
scripts/: deploy.py
src/: Debug.cpp  Debug.h  DebugLED.h  Morse.cpp  Morse.h  MorseDecoder.cpp  MorseDecoder.h  boot_out.txt  code.py  debug.h  main.cpp  main.h
